# blockinfo_mysql/api/swagger/swagger.yaml
@@ -180,6 +180,24 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse" 
+  /trans_last_hour:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: trans_last_hour
+    get:
+      description: Returns 'transactions' to the caller
+      # used as the method name of the controller
+      operationId: trans_last_hour
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/TransactionsResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse" 
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
